--- a/src/styles/Library.css
+++ b/src/styles/Library.css
@@ -2,23 +2,28 @@
   text-align: center;
   font-size: 1rem;
   color: rgb(65, 153, 153);
+  margin-top: 10rem;
 }
 
 a:hover.library-album-info {
   text-decoration: none;
-  color: #bfbfbf;
+  color: #376ff0;
 
 }
 
-.img-responsive {
-  margin: 0 auto;
+a:hover.library-album-info .image {
+  opacity: 0.50;
+	transform: scale(1.025);
+	transition: .2s ease-in-out;
 }
 
 .library-album-artist {
   font-size: 1.25rem;
-  padding-top: .5rem;
+
 }
 
 .image {
-padding: 1rem;
+padding: 0.5rem;
+width: 100%;
+padding-top: 2.5rem;
 }
